Fix overflowing labels in IE10

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1457,6 +1457,7 @@ fieldset[disabled] .btn-info.active {
     color: @link-color;
     display: flex;
     justify-content: space-between;
+    overflow-x: hidden;
 
     &:active, &:focus, &:hover {
       background-color: transparent;
